--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.140"
 genai-types = "0.4.2"
+mcp-protocol = "0.2.0"
 
 [lib]
 crate-type = ["cdylib"]
